2013-08-26 Paulo Andrade <pcpa@gnu.org>

	lib/jit_ppc.c: Correct C sequence point problem miscalculating
	the actual function address in a function descriptor. Problem
	happens with gcc 4.8.1 at least.

2013-08-11 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_s390x-cpu.c: Correct code checking if immediate
	fits instruction, but using the negated value.

2013-07-28 Paulo Andrade <pcpa@gnu.org>

	* include/lightning/jit_s390x.h, lib/jit_s390x-cpu.c,
	lib/jit_s390x-fpu.c, lib/jit_s390x.c: New files
	implementing the new s390x port.

	* configure.ac, include/lightning.h,
	include/lightning/Makefile.am,
	include/lightning/jit_private.h,
	lib/Makefile.am, lib/jit_disasm.c, lib/lightning.c:
	Minor adaptation for the new s390x backend.

	* check/float.tst: Update for the s390x result of
	truncating +Inf to integer.

	* check/qalu_mul.tst: Add extra test cases to better test
	high word of signed multiplication as the result is
	adjust from unsigned multiplication on s390x.

2013-07-28 Paulo Andrade <pcpa@gnu.org>

	* check/lightning.c: Do not assume casting a double NaN or
	Inf to float will produce the expected float NaN or Inf.
	This is not true at least under s390x.

2013-07-28 Paulo Andrade <pcpa@gnu.org>

	* check/check.arm.sh, check/check.sh, check/check.swf.sh,
	check/check.x87.sh: Properly check test programs output,
	not just rely on the test program self testing the results
	and not crashing.

2013-07-28 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_aarch64.c: Remove unused macros left from cut&paste
	of jit_arm.c.

2013-07-16 Paulo Andrade <pcpa@gnu.org>

	* include/lightning/jit_aarch64.h, lib/jit_aarch64-cpu.c,
	lib/jit_aarch64-fpu.c, lib/jit_aarch64.c: New files
	implementing the new aarch64 port, as a new architecture,
	not as an expansion of the existing armv[4-7] port.

	* check/lightning.c: Add aarch64 support and a small
	change to recognize character constants as immediate
	values.

	* check/float.tst: Add aarch64 preprocessor conditionals